--- a/ledgercss.css
+++ b/ledgercss.css
@@ -11,11 +11,11 @@ header{
 	position:fixed;
 	box-sizing:border-box;
 	top: 0px;
-	left:0px;
-	height:60px;
-	width:100%;
+	left:1%;
+	height:6%;
+	width:98%;
 	margin:0;
-	padding:5px;
+	padding:0.7vh;
 	background:#77CCAA;
 	background: -moz-radial-gradient(center, #77CCAA, #66AA44);
 	background: -webkit-radial-gradient(center, #77CCAA, #66AA44);
@@ -28,28 +28,28 @@ nav{
 	position:fixed;
 	box-sizing:border-box;
 	overflow-y:hidden;
-	top: 60px;
-	left:0px;
+	top: 6%;
+	left:1%;
 	background:#DDDDDD;
 	background: -moz-radial-gradient(center, #EEEEEE, #BBBBBB);
 	background: -webkit-radial-gradient(center, #EEEEEE, #BBBBBB);
 	background: -o-radial-gradient(center, #EEEEEE, #BBBBBB);
 	background: -ms-radial-gradient(center, #EEEEEE, #BBBBBB);
-	height:999;
-	width:130px;
+	height:90%;
+	width:10%;
 	padding:10px;
 	font-family:verdana;
 	}
 section{
 	position:fixed;
 	box-sizing:border-box;
-	top:60px;
-	left:130px;
+	top:8%;
+	left:11%;
 	overflow-y:scroll;
 	overflow-x:scroll;
 	background-color:"white";
 	height:750px;
-	width:100%;
+	width:88%;
 	padding: 15px;
 	font-family:verdana;
 	}
@@ -58,14 +58,15 @@ footer{
 	position:fixed;
 	box-sizing:border-box;
 	bottom:0px;
-	left: 0px;
+	left: 1%;
 	background:#77CCAA;
 	background: -moz-radial-gradient(center, #77CCAA, #669933);
 	background: -webkit-radial-gradient(center, #77CCAA, #669933);
 	background: -o-radial-gradient(center, #77CCAA, #669933);
 	background: -ms-radial-gradient(center, #77CCAA, #669933);
-	height:50px;
-	width:100%;
+	height:4%;
+	width:98%;
+	padding:0;
 	font-family:verdana;
 	text-align:center;
 	}
